updated supply chain exercises and added powerseries expansion example

--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -13,7 +13,6 @@
     "### Objectives\n",
     "- Understand the format of input-output tables\n",
     "- Calculate the Leontief and Ghosh inverse\n",
-    "- Apply demand and price driven models\n",
     "- Calculate backward and forward linkages"
    ]
   },
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -58,74 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Agriculture</th>\n",
-       "      <th>Manufacturing</th>\n",
-       "      <th>Services</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Agriculture</th>\n",
-       "      <td>0.6</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Manufacturing</th>\n",
-       "      <td>0.8</td>\n",
-       "      <td>30.6</td>\n",
-       "      <td>7.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Services</th>\n",
-       "      <td>0.9</td>\n",
-       "      <td>12.1</td>\n",
-       "      <td>23.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Agriculture  Manufacturing  Services\n",
-       "Agriculture            0.6            2.6       0.5\n",
-       "Manufacturing          0.8           30.6       7.8\n",
-       "Services               0.9           12.1      23.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "labels = pd.Index([\"Agriculture\", \"Manufacturing\", \"Services\"])\n",
     "\n",
@@ -150,28 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.3, 22.4, 52.5])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Value added (last row of the first table)\n",
-    "V = np.array([3.30, 22.4, 52.5])\n",
-    "V"
+    "v = np.array([3.30, 22.4, 52.5])\n",
+    "v"
    ]
   },
   {
@@ -187,27 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.9, 28.5, 47.8])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Y = np.array([1.9, 28.5, 47.8])\n",
-    "Y"
+    "y = np.array([1.9, 28.5, 47.8])\n",
+    "y"
    ]
   },
   {
@@ -238,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -266,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -275,7 +191,7 @@
    "outputs": [],
    "source": [
     "Z_sum = None\n",
-    "x_in = None\n",
+    "x_in = None \n",
     "x_in"
    ]
   },
@@ -311,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -326,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -335,7 +251,7 @@
    "outputs": [],
    "source": [
     "# Create an identity matrix the same order (i.e., shape) as A\n",
-    "I = None # A.shape[0] is the same as writing the number of available sectors .shape allows you to see the dimensions of the dataframe\n",
+    "I = None# A.shape[0] is the same as writing the number of available sectors .shape allows you to see the dimensions of the dataframe\n",
     "\n",
     "# print(f\"The dimension/order of I is {I.shape}\")\n",
     "I"
@@ -362,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -378,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -388,7 +304,7 @@
    "source": [
     "# Check that the total product output is equal to the one we have already calculated\n",
     "x = None # @ operand is the same as np.dot(L, Y)\n",
-    "x\n",
+    "x, x_out\n",
     "# beware when using np.matmul and np.dot/@ interchangeably. \n",
     "# for more info https://www.delftstack.com/howto/numpy/numpy-dot-vs-matmul/ "
    ]
@@ -418,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -427,15 +343,15 @@
    "outputs": [],
    "source": [
     "# Transpose the direct requirement matrix A\n",
-    "A_p = None\n",
+    "A_t = None\n",
     "# Calculate the leontief inverse matrix in the price model\n",
-    "L_p = None\n",
-    "L_p"
+    "L_t = None\n",
+    "L_t, L.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -444,7 +360,7 @@
    "outputs": [],
    "source": [
     "# calculate the value added coefficients by dividing the value added by total product output\n",
-    "v = None\n",
+    "v_c = None\n",
     "\n",
     "# Check that p=1\n",
     "p = None\n",
@@ -470,14 +386,14 @@
     }
    },
    "source": [
-    "1. Create a technical coefficient matrix B and its identity matrix\n",
+    "1. Create an allocation coefficient matrix B and its identity matrix\n",
     "\n",
     "    $\\mathbf{B} = \\hat{\\mathbf{x}}^{-1} \\mathbf{Z}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -508,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -523,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -532,8 +448,8 @@
    "outputs": [],
    "source": [
     "# Check that the total product input is equal to the one we have already calculated x=G'V\n",
-    "x_g = None\n",
-    "x_g"
+    "x_input = None\n",
+    "x_input"
    ]
   },
   {
@@ -572,31 +488,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A matrix:\n",
-      "\n",
-      "None\n",
-      "\n",
-      "L matrix:\n",
-      "\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Labelling Leontief quantity model\n",
-    "# A.columns = None\n",
+    "A.columns = None\n",
+    "\n",
     "L = None\n",
+    "\n",
     "print(f\"A matrix:\\n\\n{A}\\n\\nL matrix:\\n\\n{L}\")"
    ]
   },
@@ -617,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -626,12 +530,14 @@
    "outputs": [],
    "source": [
     "# Sum the sectors in A to obtain the direct backward linkages\n",
-    "s_a_sum = None"
+    "s_a_sum = None\n",
+    "\n",
+    "s_a_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -640,7 +546,9 @@
    "outputs": [],
    "source": [
     "# Sum the sectors in L to obtain the total backward linkages\n",
-    "s_l_sum = None"
+    "s_l_sum = None\n",
+    "\n",
+    "s_l_sum"
    ]
   },
   {
@@ -661,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -673,12 +581,13 @@
     "no_sectors = None\n",
     "avg_a = None\n",
     "norm_dir_back_link = None\n",
-    "s_a_sum"
+    "\n",
+    "norm_dir_back_link"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -688,12 +597,14 @@
    "source": [
     "# Normalize total backward linkages results \n",
     "avg_l = None\n",
-    "norm_tot_back_link = None"
+    "norm_tot_back_link = None\n",
+    "\n",
+    "norm_tot_back_link"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -702,9 +613,9 @@
    "outputs": [],
    "source": [
     "# Assemble a table with direct and total backward linkages\n",
-    "norm_backward_linkages = None # Using pd.concat\n",
-    "# norm_backward_linkages.columns = None\n",
-    "# norm_backward_linkages"
+    "norm_backward_linkages = None\n",
+    "norm_backward_linkages.columns = None\n",
+    "norm_backward_linkages"
    ]
   },
   {
@@ -731,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -740,8 +651,9 @@
    "outputs": [],
    "source": [
     "# Labelling Ghosh quantity model\n",
-    "# B.index = labels\n",
-    "G = None"
+    "B.index = None\n",
+    "G = None\n",
+    "B, G"
    ]
   },
   {
@@ -759,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -774,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -805,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -813,16 +725,15 @@
    },
    "outputs": [],
    "source": [
-    "no_products = None\n",
-    "\n",
     "# Normalize direct forward linkages results \n",
     "avg_b = None\n",
-    "norm_dir_fwd_link = None"
+    "norm_dir_fwd_link = None\n",
+    "norm_dir_fwd_link"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -832,12 +743,13 @@
    "source": [
     "# Normalize total forward linkages results \n",
     "avg_g = None\n",
-    "norm_tot_fwd_link = None"
+    "norm_tot_fwd_link = None\n",
+    "norm_tot_fwd_link"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -846,9 +758,9 @@
    "outputs": [],
    "source": [
     "# Assemble a table with direct and total forward linkages\n",
-    "# norm_forward_linkages = pd.concat([norm_dir_fwd_link, norm_tot_fwd_link], axis=1)\n",
-    "# norm_forward_linkages.columns = columns=[\"direct_fwd_link\", \"total_fwd_link\"]\n",
-    "# norm_forward_linkages"
+    "norm_forward_linkages = None\n",
+    "norm_forward_linkages.columns = None\n",
+    "norm_forward_linkages"
    ]
   },
   {
@@ -864,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -881,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -945,12 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "6d1f42742d8eeff3650217bec81eeb13815fa78739aef7423c986dc57d3645fd"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
