--- a/national_enviro_footprint/nat_enviro_footprint.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -817,7 +817,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -975,7 +975,7 @@
        "7                                             NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1188,7 +1188,7 @@
        "23    ROW               Services"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1314,7 +1314,7 @@
        "11    ROW                      Gross capital formation"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2267,7 +2267,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2305,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -3207,7 +3207,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3234,7 +3234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3449,7 +3449,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3483,7 +3483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3511,7 +3511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3525,7 +3525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3563,7 +3563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -3578,7 +3578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3592,7 +3592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3617,7 +3617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3674,7 +3674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4450,7 +4450,7 @@
        "       Services                         3.227542e+05  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4477,7 +4477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4491,7 +4491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4505,7 +4505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4519,7 +4519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4533,7 +4533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -5309,7 +5309,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5335,7 +5335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5350,7 +5350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5365,7 +5365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5379,7 +5379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -5392,7 +5392,7 @@
        "7"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5417,7 +5417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5431,7 +5431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5445,7 +5445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5459,7 +5459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -6235,7 +6235,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6264,7 +6264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -6593,7 +6593,7 @@
        "       Services                          1.267166e+04  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6622,7 +6622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -6660,7 +6660,7 @@
        "Name: (BRICS, Gross capital formation), dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6685,7 +6685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -6881,7 +6881,7 @@
        "       Services               1.527349e+03                      1.527349e+03"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6935,7 +6935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -6949,7 +6949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -6964,7 +6964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -6978,7 +6978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -7754,7 +7754,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7779,7 +7779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7793,7 +7793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7808,7 +7808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7822,7 +7822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -8598,7 +8598,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8634,7 +8634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8650,7 +8650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8679,7 +8679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8706,7 +8706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8716,10 +8716,10 @@
     {
      "data": {
       "text/plain": [
-       "34758162135.0"
+       "(0.14722856692261643, 34758162135.0)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8727,7 +8727,7 @@
    "source": [
     "# Calculate the total global footprint\n",
     "F_CO2_total = f_CO2 @ L @ Y.sum(axis=1) + Fhh_CO2.sum()\n",
-    "F_CO2_total"
+    "(Fhh_CO2.sum()*1e-9)/(F_CO2_total*1e-9), F_CO2_total\n"
    ]
   },
   {
@@ -8743,7 +8743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8757,7 +8757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -8867,7 +8867,7 @@
        "       Gross capital formation                      2.589339e+09"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8891,7 +8891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8907,7 +8907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -8956,7 +8956,7 @@
        "CO2 emissions (unit: tonnes/year)  1.577924e+10  1.335968e+10  8.262854e+09"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8995,7 +8995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -9009,7 +9009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -9023,7 +9023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -9037,7 +9037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -9813,7 +9813,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9839,7 +9839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -10616,7 +10616,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10655,7 +10655,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "EEIO",
    "language": "python",
    "name": "python3"
   },
@@ -10669,12 +10669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "a0de1fb450ee5e26d734f0aa5b4c4b29e20575809e5e66472467df7627fd957d"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
