--- a/scenario_analysis/scenario_analysis.ipynb
+++ b/scenario_analysis/scenario_analysis.ipynb
@@ -8,11 +8,11 @@
     }
    },
    "source": [
-    "#  Circularity Interventions in monetary tables\n",
+    "#  Scenario analysis in monetary tables\n",
     "\n",
     "Objectives\n",
-    "- Learn how to create scenarios in IO \n",
-    "- Assess the impacts of circularity interventions\n",
+    "- Learn how to create scenarios in IOA \n",
+    "- Assess the impacts of changes in IOTs\n",
     "- Conduct a novel analysis \n",
     "\n",
     "You can download exiobase through this link https://zenodo.org/record/5589597\n",
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -533,10 +533,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Global relative change: 0.27%\n"
+     "ename": "NameError",
+     "evalue": "name 'F' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m delta_F \u001b[38;5;241m=\u001b[39m \u001b[43mF\u001b[49m\u001b[38;5;241m.\u001b[39mloc[indicator] \u001b[38;5;241m-\u001b[39m F_ct\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m      3\u001b[0m F_relative_change \u001b[38;5;241m=\u001b[39m (delta_F\u001b[38;5;241m/\u001b[39mF\u001b[38;5;241m.\u001b[39mloc[indicator]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m)\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGlobal relative change: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mround\u001b[39m(delta_F\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m/\u001b[39mF\u001b[38;5;241m.\u001b[39mloc[indicator]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m2\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'F' is not defined"
      ]
     }
    ],
