--- a/scenario_analysis/scenario_analysis.ipynb
+++ b/scenario_analysis/scenario_analysis.ipynb
@@ -246,7 +246,7 @@
     }
    },
    "source": [
-    "## Step 3: Create a scenario (i.e., counterfactual IO system) based on your chosen circularity intervention "
+    "## Step 3: Create a scenario (i.e., counterfactual IO system) based on your chosen change or intervention "
    ]
   },
   {
@@ -621,7 +621,7 @@
     }
    },
    "source": [
-    "## Step 4: Reflect on your scenario, what does your assessment tells you about the sustainability of your circularity interventions? "
+    "## Step 4: Reflect on your scenario, what does your assessment tells you about the sustainability of your interventions? "
    ]
   }
  ],
